[tool.poetry]
name = "dailywikipedia"
version = "1.0.0"
description = "A telegram bot that sends a featured daily article"
authors = ["Iván José Martín García <ivanmartinga@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
python-telegram-bot = "^12.4.2"
atoma = "^0.0.17"
pynamodb = "^4.3.1"
httpx = "0.7.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
